THRIFT-4177 fix java deep copy

Java compiler produces deep copy constructor that could make shallow copy instead.